# autotools-example

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
src/: Makefile.am  fib.c  libfib.c  libfib.h
src/pyfib/: Makefile.am  fib.py
